--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 </figure>
             </article>
         </main>
-        <form url="https://formspree.io/f/xvojpdyy" method="post">
+        <form action="https://api.sheetmonkey.io/form/o8ry3gfo9TDaYmPPmLYDTm" method="post">
             <h1>Conheça nosos serviços:</h1>
-            <input type="text" placeholder="Nome">
-            <input type="text" placeholder="Email">
+            <input type="text" name="nome" placeholder="Nome">
+            <input type="email" name="email" placeholder="Email">
             <button type="submit">Enviar</button>
         </form >
     </div>
