--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             <h1 class="title">Tradição em projetos de arquitetura</h1>
             <p class="til">Arquitetura residencial e comercial. </p>
         </header>
-        <nav>
-            <h1 class="number">850</h1>
-            <h1 class="number">40</h1>
-            <h1 class="number">2,000,000</h1>
+        <nav class="number">
+            <h1>850</h1>
+            <h1>40</h1>
+            <h1>2,000,000</h1>
         </nav>
         <div id="sub">
-            <p>empreendimentos construídos</p>
+            <p class="p11">empreendimentos construídos</p>
             <p class="p11">anos de mercado e experiência</p>
             <p class="p11"> m² em projetos construídos</p>
         </div>
